memperbaiki beberapa fungsi

--- a/src/MainPackage/MainFrame.form
+++ b/src/MainPackage/MainFrame.form
@@ -38,6 +38,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Tugas 3"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem3ActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
