--- a/src/Tugas1/sub1_Tugas1.form
+++ b/src/Tugas1/sub1_Tugas1.form
@@ -136,6 +136,7 @@
         <Component class="javax.swing.JTextField" name="txtNim">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtNama">
